--- a/CSS/main.css
+++ b/CSS/main.css
@@ -48,12 +48,11 @@ align-items: center;
 }
 
 .containerIlust{  /* index.html */
-background-image: url("../img/index/IlustracionB.png");
-background-size:cover;
-height: 100vh;
-display: flex;
-justify-content: center;
-align-items: baseline;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+  
 }
 
 .works{   /* nuestro_trabajo.html */
@@ -92,7 +91,7 @@ background-color: rgb(243, 186, 44);
 padding: 20px;
 display: flex;
 flex-direction: column;
-width: 20%;
+width: 30%;
 }
 
 .containerForm{ /* hablemos.html */
