--- a/CSS/style.scss
+++ b/CSS/style.scss
@@ -1,1 +1,4 @@
-
+@import "../secondaryCSS/base";
+@import "../secondaryCSS/components";
+@import "../secondaryCSS/layout";
+@import "../secondaryCSS/utilities";
