--- a/main.css
+++ b/main.css
@@ -55,10 +55,6 @@ align-items: center;
   
 }
 
-.works{   /* nuestro_trabajo.html */
-  padding: 90px;
-}
-
  .cards{  /* nuestro_trabajo.html */
 display: flex;
 gap: 45px;
@@ -78,11 +74,9 @@ background-color: rgb(243, 186, 44);
   width: 100%;
 }
 
-.services{ /* servicios.html */
-  padding: 90px;
-}
 
-.workers{ /* conocenos.html */
+
+.worker, services, works{ /* conocenos.servicios.nuestro_trabajo.html */
   padding: 90px;
 }
 
