--- a/CSS/style.scss
+++ b/CSS/style.scss
@@ -1,4 +1,5 @@
 @import "../secondaryCSS/base";
+@import "../secondaryCSS/mediaqueries";
 @import "../secondaryCSS/components";
 @import "../secondaryCSS/layout";
 @import "../secondaryCSS/utilities";
