--- a/secondaryCSS/_base.scss
+++ b/secondaryCSS/_base.scss
@@ -1,4 +1,3 @@
-
 *{
   margin: 0;
   padding: 0;
@@ -10,14 +9,25 @@
 
   @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200;600&display=swap');
 
-  ul{
+  ul, a {
     list-style-type:none;
+    width: 100px;
+    margin: auto;
+    padding: 0; 
+    display: flex;
+    flex-direction: row;
   }
   
-  h3, h4, a {
+  h3 {
     color: black;
-    background-color: rgb(243, 186, 44);
+    background-color: $mainColour;
     text-align: center;
     text-decoration: none;
-    }  
-  
+  }
+
+  h4 {
+    color: black;
+    background-color: $mainColour;
+    display: flex;
+    text-align:justify;
+  }
