--- a/secondaryCSS/_mediaqueries.scss
+++ b/secondaryCSS/_mediaqueries.scss
@@ -1,12 +1,6 @@
-@media screen and (min-width: 750px) {
+@media screen and (max-width: 1050px) and (min-width: 750px) {
   .cards {
     background-color: darkgrey;
   
-
-@media screen and  (max-width: 1050px){
-.cards {
-  background-color: darkgrey;
-}
-}
 }  
 }
