--- a/secondaryCSS/_base.scss
+++ b/secondaryCSS/_base.scss
@@ -31,3 +31,10 @@
     display: flex;
     text-align:justify;
   }
+
+  p {
+    list-style-type:none;
+    text-decoration: none;
+    color: black;
+    bottom: -10px;
+  }
