--- a/secondaryCSS/_mediaqueries.scss
+++ b/secondaryCSS/_mediaqueries.scss
@@ -1,4 +1,5 @@
-@media screen and (max-width: 1050px) and (min-width: 750px) {
+
+@media screen and (max-width: 768px) {
   .cards {
     background-color: darkgrey;
   
