img cards config

--- a/secondaryCSS/_layout.scss
+++ b/secondaryCSS/_layout.scss
@@ -3,6 +3,7 @@ body {
 
   .headline {
   padding: 10px 35px;
+  width: 100%;
   background-color: rgb(243, 186, 44);
  
   justify-content: flex-start;
