--- a/CSS/style.css
+++ b/CSS/style.css
@@ -42,7 +42,7 @@ p {
   }
 }
 .workers, .work, .services, .works {
-  padding: 30px;
+  padding: 10px;
 }
 .workers .cards, .work .cards, .services .cards, .works .cards {
   display: flex;
@@ -79,6 +79,7 @@ body {
 }
 body .headline {
   padding: 10px 35px;
+  width: 100%;
   background-color: rgb(243, 186, 44);
   justify-content: flex-start;
   align-items: flex-end;
