--- a/CSS/style.css
+++ b/CSS/style.css
@@ -6,8 +6,9 @@
   font-family: "Montserrat", sans-serif;
 }
 
-ul, a {
+ul {
   list-style-type: none;
+  text-decoration: none;
   width: 100px;
   margin: auto;
   padding: 0;
@@ -34,35 +35,47 @@ p {
   text-decoration: none;
   color: black;
   bottom: -10px;
+  background-color: p rgb(243, 186, 44);
 }
 
 @media screen and (max-width: 768px) {
-  .cards {
-    background-color: darkgrey;
+  .cards, .containerIlust {
+    background-color: white;
+    flex-direction: column;
+  }
+  h3 {
+    background-color: bisque;
   }
 }
-.workers, .work, .services, .works {
-  padding: 10px;
+@media screen and (min-width: 1500px) {
+  .cards, .containerIlust {
+    background-color: black;
+    flex-direction: column;
+  }
+  h3 {
+    background-color: bisque;
+  }
 }
-.workers .cards, .work .cards, .services .cards, .works .cards {
-  display: flex;
-  gap: 5px;
-  background-color: rgb(243, 186, 44);
-}
-.workers .cards .card translate, .work .cards .card translate, .services .cards .card translate, .works .cards .card translate {
-  display: flex;
+.workers, .work, .services, .works, .index {
+  padding: 2px;
+  align-items: center;
   justify-content: center;
 }
-.workers .cards .card translate .card img, .work .cards .card translate .card img, .services .cards .card translate .card img, .works .cards .card translate .card img {
-  width: 50%;
+.workers .cards, .work .cards, .services .cards, .works .cards, .index .cards {
+  display: flex;
+  gap: 2px;
+  justify-content: space-evenly;
 }
-.workers .cards .textos translate, .work .cards .textos translate, .services .cards .textos translate, .works .cards .textos translate {
+.workers .cards .card img, .work .cards .card img, .services .cards .card img, .works .cards .card img, .index .cards .card img {
+  width: 100%;
+}
+.workers .textos translate, .work .textos translate, .services .textos translate, .works .textos translate, .index .textos translate {
   display: flex;
   align-content: center;
 }
 
 .mapImg {
-  padding: 20px;
+  padding: 10px;
   display: flex;
   flex-direction: column;
   width: 30%;
@@ -78,41 +91,49 @@ body {
   background-color: rgb(223, 213, 220);
 }
 body .headline {
-  padding: 10px 35px;
   width: 100%;
   background-color: rgb(243, 186, 44);
   justify-content: flex-start;
   align-items: flex-end;
 }
 body .headline .logoImg {
-  width: 30px;
-  height: 30px;
-  border-radius: 10px;
+  width: 46px;
+  height: 46px;
+  border-radius: 50%;
+  overflow: hidden;
+  margin-top: -6px;
 }
 body .headline .nav {
   background-color: rgb(243, 186, 44);
   width: 100%;
   float: right;
-  margin: 0 0 1em 0;
-  padding: 0;
+  margin: 0 0 3em 0;
+  padding-right: 2rem;
   display: flex;
   align-items: flex-end;
+}
+body .headline .nav nav-item {
+  list-style-type: none;
+  text-decoration: none;
 }
 body .containerIlust {
   /* index.html */
   background-image: url("../img/index/IlustracionB.png") center center;
-  height: 100vh;
-  grid-row: 3/4;
-  grid-column: 3/4;
-  background-position: center;
+  justify-content: center;
+  display: grid;
+  grid-template-columns: 200px 100px 200px 100px;
 }
 
 .containerFooter {
   background-color: black;
+  width: 100%;
+  text-align: center;
+  padding-top: 1rem;
+  position: absolute;
+  top: 100%;
 }
 .containerFooter h5 {
   color: azure;
-  text-align: center;
 }
 
 .translate {
