--- a/secondaryCSS/_layout.scss
+++ b/secondaryCSS/_layout.scss
@@ -40,15 +40,17 @@ body {
     grid-template-columns: 200px 100px 200px 100px;
   }}
   
-    .containerFooter {
-      background-color: black;
-      width: 100%;
-      text-align: center;
-      padding-top: 1rem;
-      position: absolute;
-      top:100%;
+  .containerFooter {
+    position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: #000000;
+  color: #fff;
+  text-align: center;
+  padding: 20px;  
     
-      & h5 {
+      &-h5 {
         color: azure;
       }
     }
