--- a/secondaryCSS/_utilities.scss
+++ b/secondaryCSS/_utilities.scss
@@ -5,3 +5,21 @@
     transform: translate(0px, -25px);
   }
 }
+
+
+.imgIlust {
+  animation-duration: 2s;
+  animation-name: slidein;
+}
+
+@keyframes slidein {
+  from {
+    margin-left: 100%;
+    width: 100%
+  }
+
+  to {
+    margin-left: 0%;
+    width: 100%;
+  }
+}
