--- a/secondaryCSS/_components.scss
+++ b/secondaryCSS/_components.scss
@@ -1,87 +1,144 @@
-.workers, .work, .works {
+.trabajo,
+.clientes {
   padding: 5px;
   align-items: center;
   justify-content: center;
 
   .cards {
+    margin-left: 5px;
     display: flex;
     gap: 2px;
-    justify-content:space-evenly;
-    
+    justify-content: space-evenly;
+
 
     .card img {
-     width: 100%;
-     border: 2px solid black;
-     }
-   }
+      width: 100%;
+      border: 2px solid black;
+    }
+  }
+
   .textos translate {
     display: flex;
     align-content: center;
-   }
-
   }
+}
 
-.contenedor_hablemos{         /*hablemos*/
+.contenedor_hablemos {
+  /*hablemos*/
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
   grid-gap: 10px;
   margin: 0 auto;
 
-.container_map{
 
+  .containerForm {
+    height: 100%;
+    width: 100%;
+    padding: 5%;
+    text-align: center;
+  }
+}
+.container_portafolio{
+  /*obras*/
+ display: flex;
+ flex-flow: wrap;
  align-items: center;
- border: 2px solid black;
+ padding-left: 20px;
 
- .mapImg {
- width: 100%;
- height: auto;
-}}
-
-.containerForm{
-  height: 100%;
-   width: 100%;
-   padding: 5%;
+ .obras {
+   max-width: 100%;
+   margin-left: 5px;
+   border: 2px solid black;
    text-align: center;
- }}
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
 
+   &-img {
+     max-width: 100%;
+     height: auto;
+     transition: 0.5s;
+     padding-bottom: 2px;
+     background-position: center;
+     flex: 1;
+   }
 
+   h5 {
+     margin-bottom: 2px;
+     padding-top: 3px;
+     color: white;
+     background-color: $mainColour;
+     font-weight: bold;
+     text-transform: uppercase;
+   }
 
-.container_obras{         /* obras*/
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-  grid-gap: 20px;;
+   text {
+    bottom: 0;
+    max-width: 80%; 
+    background-color: white;
+    padding: 10px;
+    text-align: center;
+  }
+ }
 
-.obras{
-  padding: 10px;
-  justify-content: center;
 }
 
-.obras img {
-  width: 100%;
-  margin: 0 auto;
-  height: auto;
-  border: 2px solid black;
-}
-}
 
-.container_bienvenido{          /* index.html */
+
+.container_bienvenido {
+  /* index.html */
   display: flex;
   margin-top: 20px;
-  
-   .imgIlust {              
-      float: right;
-      align-items: center;
-      margin: 0 auto;
-      border: 2px solid black;
-    }
-  
-    .containerText{
-      align-items: center;
-      width: 40%;
-      margin: 0 auto;
-      height: 20%;
-      float: left;
-      padding-left: 10px;
-    }
+
+  .imgIlust {
+    float: right;
+    align-items: center;
+    border: 2px solid black;
   }
-  
+
+  .containerText {
+    align-items: center;
+    width: 40%;
+    margin: 0 auto;
+    height: 20%;
+    float: left;
+    padding-left: 10px;
+  }
+}
+
+.container {
+			padding: 20px;
+			margin: auto;
+			max-width: 800px;
+		}
+		form {
+			background-color: #ffffff;
+			padding: 20px;
+			border-radius: 5px;
+			box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+			margin-top: 20px;
+		}
+		label {
+			display: block;
+			margin-top: 10px;
+		}
+		input[type=text], input[type=email] {
+			width: 100%;
+			padding: 10px;
+			margin-top: 5px;
+			border: 1px solid #ccc;
+			border-radius: 4px;
+			box-sizing: border-box;
+		}
+		input[type=submit] {
+			background-color: $mainColour;
+			color: white;
+			padding: 10px 20px;
+			border: none;
+			border-radius: 4px;
+			cursor: pointer;
+			margin-top: 10px;
+		}
+		input[type=submit]:hover {
+			background-color: #45a049;
+		}
